<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.numeroeins.uniflea.activities.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:background="@drawable/edit_text_style"
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp" />

            <TextView
                android:padding="8dp"
                android:id="@+id/didntHaveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/didntHaveAccount"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RelativeLayout
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <Button
                    android:id="@+id/buttonSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/button_style"
                    android:text="@string/signIn"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_style"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
