<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.numeroeins.uniflea.activities.SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="8dp"
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@android:color/transparent"
                android:hint="@string/hintEmail"
                android:padding="16dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailLayout"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:background="@android:color/transparent"
                android:hint="@string/hintVerificationCode"
                android:padding="16dp" />


            <Button
                android:id="@+id/buttonVerify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_weight="0.8"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:text="@string/verify"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>