<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.numeroeins.uniflea.activities.DashboardActivity">


    <TextView
        android:id="@+id/sampleText"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <RelativeLayout
        android:id="@+id/productLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sampleText"
        android:layout_margin="4dp">

        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/products"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/moreProdcuts"
            android:textColor="@color/black"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/more"
            android:textSize="18dp" />

    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleviewForProductList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productLayout"
        android:layout_margin="4dp"></android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/serviceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/recycleviewForServiceList"
        android:layout_below="@id/recycleviewForProductList"
        android:layout_margin="4dp">

        <TextView
            android:textColor="@color/black"
            android:layout_marginLeft="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/services"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/moreServices"
            android:textColor="@color/black"
            android:layout_marginRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/more"
            android:textSize="18sp" />

    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleviewForServiceList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/serviceLayout"
        android:layout_margin="4dp"></android.support.v7.widget.RecyclerView>

</LinearLayout>
